--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="navBar.css">
 
-  <title>FixMeUp</title>
+  <title>FixMeUp!</title>
 
   <!-- cursor -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
