--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="home.css">
-  <link rel="stylesheet" href="navBar.css">
+  <link rel="stylesheet" href="nonChangingElements.css">
 
   <title>FixMeUp</title>
 
@@ -18,6 +18,9 @@
   <!-- Montserrat -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
 </head>
 <body>
@@ -38,6 +41,7 @@
       <div class="txt-container">
         <p>Get access to thousands of tutorials, find the tools and pieces you need and get a helping hand from our community.</p>
       </div>
+      <br/>
       <br/>
       <button type="button">Sign up</button>
     </div>
@@ -67,7 +71,7 @@
   </div>
 
   <div style="background-color:#407BFF" class="footer">
-    <p>Footer</p>
+    <button onclick="topFunction()" id="goToTop" title="Go to top"><i class="material-icons">arrow_upward</i></button>
   </div>
 
 </div>
