-- height of sections

--- a/index.html
+++ b/index.html
@@ -50,27 +50,36 @@
     </div>
   </div>
 
-  <div style="background-color:#407BFF" class="second-section">
-    <p>Second section</p>
+  <div style="background-color:#407BFF" class="second-section row">
+    <p>What do we provide?</p>
   </div>
 
-  <div style="background-color:white" class="third-section">
-    <p>Third section</p>
+  <div style="background-color:white" class="third-section row">
+    <p>Interested in joing the community</p>
   </div>
 
-  <div style="background-color:#ededed" class="fourth-section">
-    <p>Fourth section</p>
+  <div style="background-color:#ededed" class="fourth-section row">
+    <h1>Details of each</h1>
+    <h2>Get access to knowledge</h2>
+    <hr>
+    <h2>Book tools that you need in a few seconds</h2>
+    <hr>
+    <h2>Easily find people around you</h2>
   </div>
 
-  <div style="background-color:#407BFF" class="fifth-section">
-    <p>Fifth section</p>
+  <div style="background-color:#ffffff" class="fifth-section row">
+    <h2>Testamonial</h2>
   </div>
 
-  <div style="background-color:#ededed" class="sixth-section">
-    <p>Sixth section</p>
+  <div style="background-color:#ededed" class="sixth-section row">
+    <h2>If you want to learn more</h2>
   </div>
 
-  <div style="background-color:#407BFF" class="footer">
+  <div style="background-color:#ffffff" class="seventh-section row">
+    <h2>Our team</h2>
+  </div>
+
+  <div style="background-color:#407BFF" class="footer row">
     <button onclick="topFunction()" id="goToTop" title="Go to top"><i class="material-icons">arrow_upward</i></button>
   </div>
 
