--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </div>
 <div class="mainPageContainer">
 
+<!-- Your go-to platform -->
   <div class="first-section row">
     <div class="column left">
       <h1>Your go-to platform for repairing things</h1>
@@ -50,35 +51,109 @@
     </div>
   </div>
 
-  <div style="background-color:#407BFF" class="second-section row">
-    <p>What do we provide?</p>
+<!-- What we provide -->
+  <div style="background-color:#407BFF" class="second-section">
+    <h1>What do we provide?</h1>
+
+    <div class="row">
+      <div class="column">
+        <p>Access to information</p>
+        <br>
+        <p>Our platform allows to get access to the knowledge needed to specific repairs.</p>
+        <br>
+        <br>
+        <button type="button" name="button">Learn more</button>
+      </div>
+
+      <div class="column">
+        <p>Tool renting</p>
+        <br>
+        <p>We also allow you to rent tools from people around you.</p>
+        <br>
+        <br>
+        <button type="button" name="button">Learn more</button>
+      </div>
+
+      <div class="column">
+        <p>Helping hands</p>
+        <br>
+        <p>We also offer an easy way to find people to help you repair your object.</p>
+        <br>
+        <br>
+        <button type="button" name="button">Learn more</button>
+      </div>
+    </div>
   </div>
 
+<!-- Interested in joining the community -->
   <div style="background-color:white" class="third-section row">
-    <p>Interested in joing the community</p>
+    <p>Interested in joining the community</p>
   </div>
 
-  <div style="background-color:#ededed" class="fourth-section row">
-    <h1>Details of each</h1>
-    <h2>Get access to knowledge</h2>
+<!-- Details of each feature -->
+  <div style="background-color:#ededed" class="fourth-section">
+
+    <div class="first-part row">
+
+      <div class="column left">
+        <h1>Get access to knowledge</h1>
+        <div class="txt-container">
+          <p>Get access to thousands of tutorials, find the tools and pieces you need and get a helping hand from our community.</p>
+        </div>
+        <br/>
+        <br/>
+        <button type="button">Sign up</button>
+      </div>
+
+      <div class="column right">
+        <img src="Product teardown-amico.svg" alt="Product teardown">
+      </div>
+    </div>
+
     <hr>
-    <h2>Book tools that you need in a few seconds</h2>
-    <hr>
-    <h2>Easily find people around you</h2>
+
+    <div class="second-part row">
+
+      <div class="column left">
+        <h1>Book tools that you need in a few seconds</h1>
+        <div class="txt-container">
+          <p>Get access to thousands of tutorials, find the tools and pieces you need and get a helping hand from our community.</p>
+        </div>
+        <br/>
+        <br/>
+        <button type="button">Sign up</button>
+      </div>
+
+      <div class="column right">
+        <img src="Product teardown-amico.svg" alt="Product teardown">
+      </div>
+      <hr>
+    </div>
+      <hr>
+    </div>
+
+    <div class="third-part row">
+      <h2>Easily find people around you</h2>
+    </div>
+
   </div>
 
+<!-- Testamonial -->
   <div style="background-color:#ffffff" class="fifth-section row">
     <h2>Testamonial</h2>
   </div>
 
+<!-- If you want to learn more -->
   <div style="background-color:#ededed" class="sixth-section row">
     <h2>If you want to learn more</h2>
   </div>
 
+<!-- Our team -->
   <div style="background-color:#ffffff" class="seventh-section row">
     <h2>Our team</h2>
   </div>
 
+<!-- Footer -->
   <div style="background-color:#407BFF" class="footer row">
     <button onclick="topFunction()" id="goToTop" title="Go to top"><i class="material-icons">arrow_upward</i></button>
   </div>
