-- fourth section: right layout and text and button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>Our platform allows to get access to the knowledge needed to specific repairs.</p>
         <br>
         <br>
-        <button type="button" name="button">Learn more</button>
+        <button type="button" class="button2">Learn more</button>
       </div>
 
       <div class="column">
@@ -71,7 +71,7 @@
         <p>We also allow you to rent tools from people around you.</p>
         <br>
         <br>
-        <button type="button" name="button">Learn more</button>
+        <button type="button" class="button2">Learn more</button>
       </div>
 
       <div class="column">
@@ -80,7 +80,7 @@
         <p>We also offer an easy way to find people to help you repair your object.</p>
         <br>
         <br>
-        <button type="button" name="button">Learn more</button>
+        <button type="button" class="button2">Learn more</button>
       </div>
     </div>
   </div>
@@ -96,13 +96,16 @@
     <div class="first-part row">
 
       <div class="column left">
-        <h1>Get access to knowledge</h1>
+        <h1>Get access to the right knowledge</h1>
+        <br>
         <div class="txt-container">
-          <p>Get access to thousands of tutorials, find the tools and pieces you need and get a helping hand from our community.</p>
+          <h3>We provide you with top-rated tutorials to make sure you will have quality knowledge to achieve your repairs. </h3>
+          <p>We also offer step-by-step instructions to make it as clear as possible.</p>
         </div>
-        <br/>
-        <br/>
-        <button type="button">Sign up</button>
+        <br>
+        <br>
+        <br>
+        <button type="button" class="button3">Search for tutorials</button>
       </div>
 
       <div class="column right">
@@ -115,25 +118,46 @@
     <div class="second-part row">
 
       <div class="column left">
+        <img src="Product teardown-amico.svg" alt="Product teardown">
+      </div>
+
+      <div class="column right">
         <h1>Book tools that you need in a few seconds</h1>
+        <br>
         <div class="txt-container">
-          <p>Get access to thousands of tutorials, find the tools and pieces you need and get a helping hand from our community.</p>
+          <h3>You will need specific tools for certain repairs. We know this is usually costly. 💰</h3>
+          <p>Our platforms provides you with a tool rental service from people from your neighborhood.</p>
         </div>
-        <br/>
-        <br/>
-        <button type="button">Sign up</button>
+        <br>
+        <br>
+        <br>
+        <button type="button" class="button3">Find tools around you</button>
+      </div>
+
+    </div>
+
+    <hr>
+
+    <div class="third-part row">
+
+      <div class="column left">
+        <h1>Easily find people around you</h1>
+        <br>
+        <div class="txt-container">
+          <h3>You will be impressed at how friendly people in your neighborhood are. 😊</h3>
+          <p>If a repair seems too difficult for you to do, you can find people around you to do it for you.</p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <button type="button" class="button3">Find helpers around you</button>
       </div>
 
       <div class="column right">
         <img src="Product teardown-amico.svg" alt="Product teardown">
       </div>
       <hr>
-    </div>
-      <hr>
-    </div>
 
-    <div class="third-part row">
-      <h2>Easily find people around you</h2>
     </div>
 
   </div>
