--- a/index.html
+++ b/index.html
@@ -57,25 +57,31 @@
 
     <div class="row">
       <div class="column">
-        <p>Access to information</p>
+        <img src="information.svg" alt="">
+        <h2>Access to information</h2>
+        <img src="rectangle-white.svg" alt="">
         <br>
-        <p>Our platform allows to get access to the knowledge needed to specific repairs.</p>
-        <br>
-        <br>
-        <button type="button" class="button2">Learn more</button>
-      </div>
-
-      <div class="column">
-        <p>Tool renting</p>
-        <br>
-        <p>We also allow you to rent tools from people around you.</p>
+        <p>Our platform allows to <span>get access to the knowledge</span> needed to specific repairs.</p>
         <br>
         <br>
         <button type="button" class="button2">Learn more</button>
       </div>
 
       <div class="column">
-        <p>Helping hands</p>
+        <img src="tool-renting.svg" alt="">
+        <h2>Tool renting</h2>
+        <img src="rectangle-white.svg" alt="">
+        <br>
+        <p>We also allow you to <span>rent tools</span> from people around you.</p>
+        <br>
+        <br>
+        <button type="button" class="button2">Learn more</button>
+      </div>
+
+      <div class="column">
+        <img src="helping-hands.svg" alt="">
+        <h2>Helping hands</h2>
+        <img src="rectangle-white.svg" alt="">
         <br>
         <p>We also offer an easy way to find people to help you repair your object.</p>
         <br>
@@ -109,7 +115,7 @@
       </div>
 
       <div class="column right">
-        <img src="Product teardown-amico.svg" alt="Product teardown">
+        <img src="screen_1.png" alt="Product teardown">
       </div>
     </div>
 
@@ -118,7 +124,7 @@
     <div class="second-part row">
 
       <div class="column left">
-        <img src="Product teardown-amico.svg" alt="Product teardown">
+        <img src="screen_2.png" alt="Product teardown">
       </div>
 
       <div class="column right">
@@ -154,9 +160,8 @@
       </div>
 
       <div class="column right">
-        <img src="Product teardown-amico.svg" alt="Product teardown">
+        <img src="screen_3.png" alt="Product teardown">
       </div>
-      <hr>
 
     </div>
 
