--- a/index.html
+++ b/index.html
@@ -169,7 +169,18 @@
 
 <!-- Testamonial -->
   <div style="background-color:#ffffff" class="fifth-section row">
-    <h2>Testamonial</h2>
+
+    <div class="column left">
+      <img src="avatar.png" alt="">
+    </div>
+
+    <div class="column right">
+      <div class="txt-container">
+        <h5 style="color:#407BFF">Alan Arnold</h5>
+        <h3>“One website for parts, a bunch of google searching to try to find instructions, finding the tools.... Your site would have all of that in one place! And having a community of people on your site who are able to share tips and advice about particular repairs is a good idea.”</h3>
+      </div>
+    </div>
+
   </div>
 
 <!-- If you want to learn more -->
@@ -184,7 +195,53 @@
 
 <!-- Footer -->
   <div style="background-color:#407BFF" class="footer row">
-    <button onclick="topFunction()" id="goToTop" title="Go to top"><i class="material-icons">arrow_upward</i></button>
+
+    <div class="column small"></div>
+
+    <div class="column big">
+      <div class="txt-container">
+        <p>FixMeUp</p>
+        <img src="logo-white.png" alt="" width="100">
+      </div>
+    </div>
+
+    <div class="column big"></div>
+
+    <div class="column big">
+      <div class="txt-container">
+        <h5>Our platform</h5>
+        <h3>Pricing</h3>
+        <h3>About</h3>
+        <h3>Contact</h3>
+      </div>
+    </div>
+
+    <div class="column big">
+      <div class="txt-container">
+        <h5>For the needers</h5>
+        <h3>Tool renting</h3>
+        <h3>Tutorials</h3>
+        <h3>Forum</h3>
+        <h3>Profile</h3>
+        <h3>Previous orders</h3>
+      </div>
+    </div>
+
+    <div class="column big">
+      <div class="txt-container">
+        <h5>For the helpers</h5>
+        <h3>Tutorial posting</h3>
+        <h3>Tool posting</h3>
+        <h3>Forum</h3>
+        <h3>Profile</h3>
+        <h3>Previous renting</h3>
+      </div>
+    </div>
+
+    <div class="column small">
+      <button onclick="topFunction()" id="goToTop" title="Go to top"><i class="material-icons">arrow_upward</i></button>
+    </div>
+
   </div>
 
 </div>
