--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>FixMeUp</title>
 
-  <!-- cursor -->
+  <!-- hello --> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
   <span id="circle" class="circle"></span>
