--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>FixMeUp</title>
 
-  <!-- hello --> 
+  <!-- hello -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
   <span id="circle" class="circle"></span>
@@ -190,6 +190,10 @@
       </div>
     </div>
 
+  </div>
+
+  <div class="fifth-section2">
+    <h1>Geet</h1>
   </div>
 
 <!-- If you want to learn more -->
