--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
 <!-- Interested in joining the community -->
   <div style="background-color:white" class="third-section row">
-    <p>Interested in joining the community</p>
+    <p>Interested in joining the community ?</p>
+
   </div>
 
 <!-- Details of each feature -->
@@ -190,10 +191,6 @@
       </div>
     </div>
 
-  </div>
-
-  <div class="fifth-section2">
-    <h1>Geet</h1>
   </div>
 
 <!-- If you want to learn more -->
