--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 
 <!-- Interested in joining the community -->
   <div style="background-color:white" class="third-section row">
-    <p>Interested in joining the community ?</p>
-
+    <h1>Interested in joining the community ?</h1>
+    <button type="button">Join as a needer</button>
+<button type="button">Join as a helper</button>
   </div>
 
 <!-- Details of each feature -->
