--responsiveness of the "what we provide" section

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <div class="row">
       <div class="column">
         <img src="information.svg"  alt="">
-        <h2>Access to information</h2>
+        <h2>Access to<br>information</h2>
         <img src="rectangle-white.svg" class="rectangle" alt="">
         <br>
-        <p>Our platform allows to <span>get access to the knowledge</span> needed to specific repairs.</p>
+        <p>We allow you to <span>get access to the knowledge</span> to repair.</p>
         <br>
         <br>
         <button onclick="knowledge()" type="button" class="button2">Learn more</button>
@@ -69,7 +69,7 @@
 
       <div class="column">
         <img src="tool-renting.svg" alt="">
-        <h2>Tool renting</h2>
+        <h2>Tool<br>renting</h2>
         <img src="rectangle-white.svg" class="rectangle" alt="">
         <br>
         <p>We also allow you to <span>rent tools</span> from people around you.</p>
@@ -80,10 +80,10 @@
 
       <div class="column">
         <img src="helping-hands.svg" alt="">
-        <h2>Helping hands</h2>
+        <h2>Helping<br>hands</h2>
         <img src="rectangle-white.svg" class="rectangle" alt="">
         <br>
-        <p>We also offer an easy way to find people to help you repair your object.</p>
+        <p>We also offer an easy way to <span>find people</span> to help you repair.</p>
         <br>
         <br>
         <button onclick="helpingHands()" type="button" class="button2">Learn more</button>
@@ -93,7 +93,7 @@
 
 <!-- Interested in joining the community -->
   <div style="background-color:white" class="third-section row">
-    <h1>Interested in joining the community ?</h1>
+    <h1>Interested in joining the community?</h1>
 <div class="centre">
     <button type="button">Join as a needer</button>
     <button type="button">Join as a helper</button>
