--button to button3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <h4>Interested in joining the community?</h4>
     <div class="centre">
       <button type="button">Join as a needer</button>
-      <button type="button">Join as a helper</button>
+      <button type="button" class="button3">Join as a helper</button>
     </div>
   </div>
 
