--our team section

--- a/index.html
+++ b/index.html
@@ -206,9 +206,38 @@
   </div>
 
 <!-- Our team -->
-  <div style="background-color:#ffffff" class="seventh-section row">
-    <h2>Our team</h2>
-  </div>
+  <div style="background-color:#ffffff" class="seventh-section">
+    <h4>Our team</h4>
+    <img src="rectangle-black.svg" class="rectangle" alt="">
+    <br>
+
+			<div class="team row">
+
+			  <div class="column">
+			    <img src="emilie-team.png" width = 100%>
+			    <h3>Camille Bonvicini</h3>
+			    <p>The Financial Expert</p>
+			  </div>
+				<div class="column">
+			    <img src="emilie-team.png" width = 100%>
+			    <h3>Emilie Durand</h3>
+			    <p>UX/UI Designer</p>
+			  </div>
+			  <div class="column">
+			    <img src="emilie-team.png" width = 100%>
+			    <h3>Geet Chopra</h3>
+			    <p>Strategy & Business<br>Development</p>
+			  </div>
+			  <div class="column">
+			    <img src="emilie-team.png" width = 100%>
+			    <h3>Pierre Grandjean</h3>
+			    <p>The maker</p>
+			  </div>
+			</div>
+
+      <button type="button" name="button" class="button3">Contact us</button>
+
+    </div>
 
 <!-- Footer -->
   <div style="background-color:#407BFF" class="footer row">
