--- a/index.html
+++ b/index.html
@@ -214,22 +214,22 @@
 			<div class="team row">
 
 			  <div class="column">
-			    <img src="emilie-team.png" width = 100%>
+			    <img src="emilie-team.png">
 			    <h3>Camille Bonvicini</h3>
 			    <p>The Financial Expert</p>
 			  </div>
 				<div class="column">
-			    <img src="emilie-team.png" width = 100%>
+			    <img src="emilie-team.png">
 			    <h3>Emilie Durand</h3>
 			    <p>UX/UI Designer</p>
 			  </div>
 			  <div class="column">
-			    <img src="emilie-team.png" width = 100%>
+			    <img src="emilie-team.png">
 			    <h3>Geet Chopra</h3>
 			    <p>Strategy & Business<br>Development</p>
 			  </div>
 			  <div class="column">
-			    <img src="emilie-team.png" width = 100%>
+			    <img src="emilie-team.png">
 			    <h3>Pierre Grandjean</h3>
 			    <p>The maker</p>
 			  </div>
