--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
       <div class="column">
         <img src="information.svg"  alt="">
         <h2>Access to<br>information</h2>
-        <img src="rectangle-white.svg" class="rectangle" alt="">
+
+        <svg width="30" height="5">
+          <rect width="30" height="5" fill="white"/>
+        </svg>
+
         <br>
         <p>We allow you to <span>get access to the knowledge</span> to repair.</p>
         <br>
@@ -70,7 +74,11 @@
       <div class="column">
         <img src="tool-renting.svg" alt="">
         <h2>Tool<br>renting</h2>
-        <img src="rectangle-white.svg" class="rectangle" alt="">
+
+        <svg width="30" height="5">
+          <rect width="30" height="5" fill="white"/>
+        </svg>
+
         <br>
         <p>We also allow you to <span>rent tools</span> from people around you.</p>
         <br>
@@ -81,7 +89,11 @@
       <div class="column">
         <img src="helping-hands.svg" alt="">
         <h2>Helping<br>hands</h2>
-        <img src="rectangle-white.svg" class="rectangle" alt="">
+
+        <svg width="30" height="5">
+          <rect width="30" height="5" fill="white"/>
+        </svg>
+
         <br>
         <p>We also offer an easy way to <span>find people</span> to help you repair.</p>
         <br>
@@ -107,7 +119,11 @@
 
       <div id="knowledge" class="column left">
         <h4>Get access to the right knowledge</h4>
-        <img src="rectangle-black.svg" class="rectangle" alt="">
+
+        <svg width="30" height="5">
+          <rect width="30" height="5" fill="black"/>
+        </svg>
+
         <br>
         <br>
         <br>
@@ -136,7 +152,11 @@
 
       <div id="toolRenting" class="column right">
         <h4>Book tools that you need in a few seconds</h4>
-        <img src="rectangle-black.svg" class="rectangle" alt="">
+
+        <svg width="30" height="5">
+          <rect width="30" height="5" fill="black"/>
+        </svg>
+
         <br>
         <br>
         <br>
@@ -158,7 +178,11 @@
 
       <div id="helpingHands" class="column left">
         <h4>Easily find people around you</h4>
-        <img src="rectangle-black.svg" class="rectangle" alt="">
+
+        <svg width="30" height="5">
+          <rect width="30" height="5" fill="black"/>
+        </svg>
+        
         <br>
         <br>
         <br>
@@ -208,7 +232,11 @@
 <!-- Our team -->
   <div style="background-color:#ffffff" class="seventh-section">
     <h4>Our team</h4>
-    <img src="rectangle-black.svg" class="rectangle" alt="">
+
+    <svg width="30" height="5">
+      <rect width="30" height="5" fill="black"/>
+    </svg>
+
     <br>
 
 			<div class="team row">
