--team images of Camille and Pierre

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <svg width="30" height="5">
           <rect width="30" height="5" fill="black"/>
         </svg>
-        
+
         <br>
         <br>
         <br>
@@ -242,7 +242,7 @@
 			<div class="team row">
 
 			  <div class="column">
-			    <img src="emilie-team.png">
+			    <img src="camille-team.png">
 			    <h3>Camille Bonvicini</h3>
 			    <p>The Financial Expert</p>
 			  </div>
@@ -257,7 +257,7 @@
 			    <p>Strategy & Business<br>Development</p>
 			  </div>
 			  <div class="column">
-			    <img src="emilie-team.png">
+			    <img src="pierre-team.png">
 			    <h3>Pierre Grandjean</h3>
 			    <p>The maker</p>
 			  </div>
