--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
   <div id="topPage" class="nav-bar">
     <img class="nav-logo" src="logo-full.png">
     <ul class="nav-text">
-      <li onclick="toolRenting()">Tool renting</li>
-      <li onclick="helpingHands()">Helping hands</li>
-      <li style="color:#407BFF; font-weight:600" href="projects.html">Log in</li>
-      <button onclick="footer()">Sign up</button>
+      <li onclick="window.open('https://fix-me-up.wixsite.com/website/tool-renting')" onclick="toolRenting()">Tool renting</li>
+      <li onclick="window.open('https://fix-me-up.wixsite.com/website/helping-hands')" onclick="helpingHands()">Helping hands</li>
+      <li onclick="window.open('https://fix-me-up.wixsite.com/website')" style="color:#407BFF; font-weight:600" href="projects.html">Log in</li>
+      <button onclick="window.open('https://fix-me-up.wixsite.com/website')">Sign up</button>
     </ul>
   </div>
-<div class="mainPageContainer">
+
+  <div class="mainPageContainer">
 
 <!-- Your go-to platform -->
   <div class="first-section row">
@@ -44,7 +45,7 @@
       </div>
       <br/>
       <br/>
-      <button type="button">Sign up</button>
+      <button onclick="window.open('https://fix-me-up.wixsite.com/website')" type="button">Sign up</button>
     </div>
     <div class="column right">
       <img src="Product teardown-amico.svg" alt="Product teardown">
@@ -134,7 +135,7 @@
         <br>
         <br>
         <br>
-        <button type="button" class="button3">Search for tutorials</button>
+        <button onclick="window.open('https://fix-me-up.wixsite.com/website/copie-de-what-is-your-issue')" type="button" class="button3">Search for tutorials</button>
       </div>
 
       <div class="column right">
@@ -167,7 +168,7 @@
         <br>
         <br>
         <br>
-        <button type="button" class="button3">Find tools around you</button>
+        <button onclick="window.open('https://fix-me-up.wixsite.com/website/tools-needed')" type="button" class="button3">Find tools around you</button>
       </div>
 
     </div>
@@ -193,7 +194,7 @@
         <br>
         <br>
         <br>
-        <button type="button" class="button3">Find helpers around you</button>
+        <button onclick="window.open('https://fix-me-up.wixsite.com/website/helping-hands')" type="button" class="button3">Find helpers around you</button>
       </div>
 
       <div class="column right">
