--centered the buttons in third-section

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
   </div>
 
 <!-- Interested in joining the community -->
-  <div style="background-color:white" class="third-section row">
-    <h4>Interested in joining the community?</h4>
-    <div class="centre">
+  <div style="background-color:white" class="third-section">
+    <h4>Interested in joining our<br>community?</h4>
+    <div class="buttonCenter">
       <button type="button">Join as a needer</button>
       <button type="button" class="button3">Join as a helper</button>
     </div>
