--aligned Pierre's part, feel free to check :)

--- a/index.html
+++ b/index.html
@@ -226,9 +226,17 @@
   </div>
 
 <!-- If you want to learn more -->
-  <div style="background-color:#ededed" class="sixth-section row">
-    <h2>If you want to learn more</h2>
-  </div>
+<div style="background-color:#ededed" class="sixth-section">
+
+    <h4>If you want to learn more</h4>
+
+    <div class="rightPart">
+      <input type="text" name="Mail" placeholder="Enter your email">
+      <button type="button" name="button" class="button4">Subscribe</button>
+    </div>
+
+</div>
+
 
 <!-- Our team -->
   <div style="background-color:#ffffff" class="seventh-section">
