--platorm instead of platforms

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <br>
         <div class="txt-container">
           <h3>You will need specific tools for certain repairs. We know this is usually costly. 💰</h3>
-          <p>Our platforms provides you with a tool rental service from people from your neighborhood.</p>
+          <p>Our platform provides you with a tool rental service from people from your neighborhood.</p>
         </div>
         <br>
         <br>
