--the contact button really works and sends an email

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>FixMeUp</title>
 
-  <!-- hello -->
+  <!-- Cursor -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
   <span id="circle" class="circle"></span>
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div id="topPage" class="nav-bar">
-    <img class="nav-logo" src="logo-full.png">
+    <img onclick="window.open('https://fix-me-up.wixsite.com/website')" class="nav-logo" src="logo-full.png">
     <ul class="nav-text">
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/tool-renting')" onclick="toolRenting()">Tool renting</li>
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/helping-hands')" onclick="helpingHands()">Helping hands</li>
@@ -237,7 +237,6 @@
 
 </div>
 
-
 <!-- Our team -->
   <div style="background-color:#ffffff" class="seventh-section">
     <h4>Our team</h4>
@@ -272,7 +271,8 @@
 			  </div>
 			</div>
 
-      <button type="button" name="button" class="button3">Contact us</button>
+      <button type="button" name="button" class="button3">
+        <a style="color:#407BFF; text-decoration:none;" href="mailto:e.durand@hotmail.com">Contact us</a></button>
 
     </div>
 
