--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			    <p>UX/UI Designer</p>
 			  </div>
 			  <div class="column">
-			    <img src="emilie-team.png">
+			    <img src="geet-team.png">
 			    <h3>Geet Chopra</h3>
 			    <p>Strategy & Business<br>Development</p>
 			  </div>
