--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
 
     <div class="column right">
       <div class="txt-container">
-        <h5 style="color:#407BFF">Alan Arnold</h5>
         <h3>“One website for parts, a bunch of google searching to try to find instructions, finding the tools.... Your site would have all of that in one place! And having a community of people on your site who are able to share tips and advice about particular repairs is a good idea.”</h3>
+        <div class="sub-text-containers">
+          <h2 style="color:#407BFF;">Alan Arnold</h2>
+          <h6 style="color:#407BFF"> WILLING TO RENT TOOLKIT</h6>
+        </div>
+        <div class="toolkit"><a href="https://fix-me-up.wixsite.com/website/tool-renting"><img src="toolkit.png" alt=""></a></div>
       </div>
     </div>
-
   </div>
 
-  <div class="fifth-section2">
-    <h1>Geet</h1>
-  </div>
 
 <!-- If you want to learn more -->
 <div style="background-color:#ededed" class="sixth-section">
