text changed for testimonial

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
       <div class="column right">
         <div class="txt-container">
-          <h3>“One website for parts, a bunch of google searching to try to find instructions, finding the tools.... Your site would have all of that in one place! And having a community of people on your site who are able to share tips and advice about particular repairs is a good idea.”</h3>
+          <h3>“Thanks to FixMeUp I figured out repairing my things was much more easier than I tought! The video tutorials made by helpers are very well explained and the sharing tools platform helped me save money! I am proud to have learnt new skillsets while having a positive impact for the planet”</h3>
           <div class="sub-text-containers">
             <h2 style="color:#407BFF;">Alan Arnold</h2>
             <h6 style="color:#407BFF"> WILLING TO RENT TOOLKIT</h6>
