--dark mode tests (js,html)

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 
 </head>
 <body>
+<!-- Navigation bar -->
   <div id="topPage" class="nav-bar">
     <img onclick="window.open('https://fix-me-up.wixsite.com/website')" class="nav-logo" src="logo-full.png">
     <ul class="nav-text">
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/tool-renting')" onclick="toolRenting()">Tool renting</li>
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/helping-hands')" onclick="helpingHands()">Helping hands</li>
       <li onclick="window.open('https://fix-me-up.wixsite.com/website')" style="color:#407BFF; font-weight:600" href="projects.html">Log in</li>
-      <button onclick="window.open('https://fix-me-up.wixsite.com/website')">Sign up</button>
+      <button onclick="darkMode()">Sign up</button>
     </ul>
   </div>
 
@@ -105,7 +106,7 @@
     </div>
 
 <!-- Interested in joining the community -->
-    <div style="background-color:white" class="third-section">
+    <div class="third-section">
       <h4>Interested in joining our<br>community?</h4>
       <div class="buttonCenter">
         <button type="button">Join as a needer</button>
@@ -206,7 +207,7 @@
     </div>
 
 <!-- Testimonial -->
-    <div style="background-color:#ffffff" class="fifth-section row">
+    <div class="fifth-section row">
 
       <div class="column left">
         <img src="avatar.png" alt="">
@@ -237,7 +238,7 @@
     </div>
 
 <!-- Our team -->
-    <div style="background-color:#ffffff" class="seventh-section">
+    <div class="seventh-section">
       <h4>Our team</h4>
 
       <svg width="30" height="5">
