--added a dark mode :)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/tool-renting')" onclick="toolRenting()">Tool renting</li>
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/helping-hands')" onclick="helpingHands()">Helping hands</li>
       <li onclick="window.open('https://fix-me-up.wixsite.com/website')" style="color:#407BFF; font-weight:600" href="projects.html">Log in</li>
-      <button onclick="darkMode()">Sign up</button>
+      <button>Sign up</button>
+      <button class="dark-toggle" onclick="darkMode()"><i class="material-icons">brightness_3</i></button>
     </ul>
   </div>
 
@@ -54,7 +55,7 @@
     </div>
 
 <!-- What we provide -->
-    <div style="background-color:#407BFF" class="second-section">
+    <div id="secondSection" class="second-section">
       <h1>What do we provide?</h1>
 
       <div class="row">
@@ -115,7 +116,7 @@
     </div>
 
 <!-- Details of each feature -->
-    <div style="background-color:#ededed" class="fourth-section">
+    <div class="fourth-section">
 
       <div class="first-part row">
 
@@ -217,7 +218,7 @@
         <div class="txt-container">
           <h3>“Thanks to FixMeUp I figured out repairing my things was much more easier than I tought! The video tutorials made by helpers are very well explained and the sharing tools platform helped me save money! I am proud to have learnt new skillsets while having a positive impact for the planet”</h3>
           <div class="sub-text-containers">
-            <h2 style="color:#407BFF;">Alan Arnold</h2>
+            <h2 style="color:#407BFF;">John Doe</h2>
             <h6 style="color:#407BFF"> WILLING TO RENT TOOLKIT</h6>
           </div>
           <div class="toolkit"><a href="https://fix-me-up.wixsite.com/website/tool-renting"><img src="toolkit.png" alt=""></a></div>
@@ -226,7 +227,7 @@
     </div>
 
 <!-- If you want to learn more -->
-    <div style="background-color:#ededed" class="sixth-section">
+    <div class="sixth-section">
 
       <h4>If you want to learn more</h4>
 
