--sections delimitations in dark mode

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 <!-- Navigation bar -->
   <div id="topPage" class="nav-bar">
-    <img onclick="window.open('https://fix-me-up.wixsite.com/website')" class="nav-logo" src="logo-full.png">
+    <img onclick="window.open('https://fix-me-up.wixsite.com/website')" id="navLogo" class="nav-logo" src="logo-full.png">
     <ul class="nav-text">
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/tool-renting')" onclick="toolRenting()">Tool renting</li>
       <li onclick="window.open('https://fix-me-up.wixsite.com/website/helping-hands')" onclick="helpingHands()">Helping hands</li>
